fixed LoaderAnimation on IE and improved Login

--- a/asset/common/scss/layout/_page-loader.scss
+++ b/asset/common/scss/layout/_page-loader.scss
@@ -12,10 +12,12 @@
     {
         position: absolute;
         top: 50%;
+        width: 100%;
+        display: block;
         color: #fff;
         content: '#';
         font-size: 100px;
-        line-height: 100px;
+        line-height: 0;
         font-weight: bold;
         @include animation(loader-anim 1.5s infinite);
     }
